change implementation to use the standard interface RequestParameterSerializer instead of introducing a new special one